--- a/src/main/resources/com/example/mlt/Register Page.fxml
+++ b/src/main/resources/com/example/mlt/Register Page.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -18,9 +17,9 @@
       </ImageView>
       <AnchorPane layoutX="63.0" layoutY="59.0" prefHeight="496.0" prefWidth="386.0" style="-fx-background-color: FFFFFF;">
          <children>
-            <ImageView fitHeight="316.0" fitWidth="306.0" layoutX="53.0" layoutY="90.0">
+            <ImageView fitHeight="316.0" fitWidth="306.0" layoutX="50.0" layoutY="97.0">
                <image>
-                  <Image url="@../../../image/Login Icon.png" />
+                  <Image url="@../../../image/Register Icon.png" />
                </image>
             </ImageView>
          </children>
@@ -29,33 +28,37 @@
          <children>
             <AnchorPane layoutX="43.0" layoutY="34.0" prefHeight="432.0" prefWidth="336.0" style="-fx-background-color: E9CCFF;">
                <children>
-                  <Text layoutX="93.0" layoutY="66.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sign In" textAlignment="CENTER" wrappingWidth="162.79052734375">
+                  <Text layoutX="93.0" layoutY="66.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sign Up" textAlignment="CENTER" wrappingWidth="162.79052734375">
                      <font>
                         <Font name="Bell MT" size="40.0" />
                      </font>
                   </Text>
-                  <PasswordField layoutX="53.0" layoutY="163.0" prefHeight="35.0" prefWidth="230.0" promptText="Enter password">
-                     <font>
-                        <Font name="Bell MT" size="18.0" />
-                     </font>
-                  </PasswordField>
-                  <TextField layoutX="53.0" layoutY="103.0" prefHeight="35.0" prefWidth="230.0" promptText="Enter email address">
+                  <TextField layoutX="53.0" layoutY="163.0" prefHeight="35.0" prefWidth="230.0" promptText="Email address">
                      <font>
                         <Font name="Bell MT" size="18.0" />
                      </font>
                   </TextField>
-                  <Button layoutX="53.0" layoutY="249.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="230.0" text="Sign In">
+                  <TextField layoutX="53.0" layoutY="103.0" prefHeight="35.0" prefWidth="230.0" promptText="Username">
+                     <font>
+                        <Font name="Bell MT" size="18.0" />
+                     </font>
+                  </TextField>
+                  <TextField layoutX="53.0" layoutY="223.0" prefHeight="35.0" prefWidth="230.0" promptText="Password">
+                     <font>
+                        <Font name="Bell MT" size="18.0" />
+                     </font>
+                  </TextField>
+                  <TextField layoutX="53.0" layoutY="283.0" prefHeight="35.0" prefWidth="230.0" promptText="Confirm password">
+                     <font>
+                        <Font name="Bell MT" size="18.0" />
+                     </font>
+                  </TextField>
+                  <Button layoutX="53.0" layoutY="353.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="230.0" text="Sign Up ">
                      <font>
                         <Font name="Bell MT" size="18.0" />
                      </font>
                   </Button>
-                  <Text layoutX="109.0" layoutY="384.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Create a new account." textAlignment="CENTER" />
-                  <Button layoutX="136.0" layoutY="394.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="62.0" text="Sign Up">
-                     <font>
-                        <Font name="Bell MT" size="13.0" />
-                     </font></Button>
-                  <Button layoutX="180.0" layoutY="297.0" mnemonicParsing="false" style="-fx-background-color: E9CCFF;" text="Forgot password?" textFill="#1343e1" />
-                  <Button layoutX="295.0" layoutY="14.0" mnemonicParsing="false" prefHeight="16.0" prefWidth="26.0" text="X" />
+                  <Button layoutX="294.0" layoutY="10.0" mnemonicParsing="false" prefHeight="16.0" prefWidth="26.0" text="X" />
                </children>
             </AnchorPane>
          </children>
