--- a/src/main/resources/com/example/mlt/User Profile.fxml
+++ b/src/main/resources/com/example/mlt/User Profile.fxml
@@ -83,7 +83,7 @@
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font></Button>
-                  <Button layoutX="489.0" layoutY="259.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="50.0" style="-fx-background-color: 00ff1a;" text="Save " textFill="WHITE" />
+                  <Button layoutX="489.0" layoutY="259.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="50.0" style="-fx-background-color: 00FF00;" text="Save " textFill="WHITE" />
                </children>
             </AnchorPane>
             <Button layoutX="339.0" layoutY="132.0" mnemonicParsing="false" prefHeight="14.0" prefWidth="77.0" style="-fx-background-color: FFFFFF;" text="Edit profile " textFill="#2923cc" />
