--- a/src/main/resources/com/example/mlt/Login Page.fxml
+++ b/src/main/resources/com/example/mlt/Login Page.fxml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mlt.LoginPageController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mlt.LoginPageController">
    <children>
       <ImageView fitHeight="600.0" fitWidth="900.0">
          <image>
@@ -51,7 +55,6 @@
                         <Font name="Bell MT" size="12.0" />
                      </font></Button>
                   <Button layoutX="180.0" layoutY="297.0" mnemonicParsing="false" style="-fx-background-color: E9CCFF;" text="Forgot password?" textFill="#1343e1" />
-                  <Button layoutX="303.0" layoutY="13.0" mnemonicParsing="false" prefHeight="16.0" prefWidth="26.0" text="X" />
                   <Text fx:id="PromptLoginLabel" fill="#ff4646" layoutX="57.0" layoutY="211.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Please enter email address and password" />
                </children>
             </AnchorPane>
