--- a/src/main/resources/com/example/mlt/User Profile.fxml
+++ b/src/main/resources/com/example/mlt/User Profile.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -8,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mlt.UserProfilePageController">
    <children>
       <ImageView fitHeight="606.0" fitWidth="900.0" layoutY="-1.0">
          <image>
@@ -34,7 +35,7 @@
                         <Font name="Bell MT" size="18.0" />
                      </font>
                   </Text>
-                  <TextField layoutX="343.0" layoutY="15.0" promptText="Enter username">
+                  <TextField fx:id="UsernameEntered" layoutX="343.0" layoutY="15.0" promptText="Enter username">
                      <font>
                         <Font name="Bell MT" size="14.0" />
                      </font>
@@ -44,7 +45,7 @@
                         <Font name="Bell MT" size="18.0" />
                      </font>
                   </Text>
-                  <TextField layoutX="343.0" layoutY="65.0" promptText="Enter email address">
+                  <TextField fx:id="EmailEntered" layoutX="343.0" layoutY="65.0" promptText="Enter email address">
                      <font>
                         <Font name="Bell MT" size="14.0" />
                      </font>
@@ -54,7 +55,7 @@
                         <Font name="Bell MT" size="18.0" />
                      </font>
                   </Text>
-                  <TextField layoutX="343.0" layoutY="115.0" promptText="Enter contact number">
+                  <TextField fx:id="ContactNumberEntered" layoutX="343.0" layoutY="115.0" promptText="Enter contact number">
                      <font>
                         <Font name="Bell MT" size="14.0" />
                      </font>
@@ -64,30 +65,30 @@
                         <Font name="Bell MT" size="18.0" />
                      </font>
                   </Text>
-                  <TextField layoutX="343.0" layoutY="165.0" promptText="Enter new password">
-                     <font>
-                        <Font name="Bell MT" size="14.0" />
-                     </font>
-                  </TextField>
                   <Text layoutX="160.0" layoutY="235.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Confirm password       :" wrappingWidth="217.60000000000014">
                      <font>
                         <Font name="Bell MT" size="18.0" />
                      </font>
                   </Text>
-                  <TextField layoutX="343.0" layoutY="215.0" promptText="Enter confirm password">
-                     <font>
-                        <Font name="Bell MT" size="14.0" />
-                     </font>
-                  </TextField>
-                  <Button layoutX="552.0" layoutY="260.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="107.0" style="-fx-background-color: FE0000;" text="Delete account" textFill="WHITE">
+                  <Button layoutX="552.0" layoutY="260.0" mnemonicParsing="false" onAction="#DeleteButton" prefHeight="26.0" prefWidth="107.0" style="-fx-background-color: FE0000;" text="Delete account" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font></Button>
-                  <Button layoutX="489.0" layoutY="259.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="50.0" style="-fx-background-color: 00FF00;" text="Save " textFill="WHITE" />
+                  <Button layoutX="489.0" layoutY="259.0" mnemonicParsing="false" onAction="#SaveButton" prefHeight="26.0" prefWidth="50.0" style="-fx-background-color: #00FF00;" text="Save " textFill="WHITE" />
+                  <PasswordField fx:id="NewPasswordEntered" layoutX="343.0" layoutY="166.0" promptText="Enter new password">
+                     <font>
+                        <Font name="Bell MT" size="14.0" />
+                     </font>
+                  </PasswordField>
+                  <PasswordField fx:id="ConfirmPasswordEntered" layoutX="343.0" layoutY="216.0" promptText="Enter confirm password">
+                     <font>
+                        <Font name="Bell MT" size="14.0" />
+                     </font>
+                  </PasswordField>
                </children>
             </AnchorPane>
             <Button layoutX="339.0" layoutY="132.0" mnemonicParsing="false" prefHeight="14.0" prefWidth="77.0" style="-fx-background-color: FFFFFF;" text="Edit profile " textFill="#2923cc" />
-            <Button layoutX="707.0" layoutY="7.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="26.0" text="X" />
+            <Button layoutX="707.0" layoutY="7.0" mnemonicParsing="false" onAction="#BackHomePageButton" prefHeight="26.0" prefWidth="26.0" text="X" />
          </children></AnchorPane>
    </children>
 </AnchorPane>
