--- a/src/main/resources/com/example/mlt/Navigation Page.fxml
+++ b/src/main/resources/com/example/mlt/Navigation Page.fxml
@@ -1,18 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.effect.Bloom?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: F4E5FF;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mlt.NavigationController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: F4E5FF;" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mlt.NavigationController">
    <children>
       <ImageView fitHeight="135.0" fitWidth="941.0" layoutX="-41.0" AnchorPane.leftAnchor="-41.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <image>
@@ -37,13 +32,13 @@
       <ButtonBar layoutY="140.0" prefHeight="40.0" prefWidth="900.0" />
       <AnchorPane layoutY="134.0" prefHeight="40.0" prefWidth="900.0" style="-fx-background-color: FFFFFF;">
          <children>
-            <Button layoutX="707.0" layoutY="7.0" mnemonicParsing="false" style="-fx-background-color: FFFFFF;" text="Payment" AnchorPane.topAnchor="7.0" />
+            <Button layoutX="707.0" layoutY="7.0" mnemonicParsing="false" onAction="#PaymentPageButton" style="-fx-background-color: FFFFFF;" text="Payment" AnchorPane.topAnchor="7.0" />
             <Button cache="true" layoutX="443.0" layoutY="9.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="95.0" style="-fx-background-color: FFFFFF;" text="Navigation" AnchorPane.topAnchor="7.0">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets></Button>
-            <Button layoutX="200.0" layoutY="7.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="95.0" style="-fx-background-color: FFFFFFF;" text="Histogram" AnchorPane.topAnchor="7.0" />
-            <Button layoutX="28.0" layoutY="9.0" mnemonicParsing="false" prefHeight="5.0" prefWidth="14.0" style="-fx-background-color: FFFFFF;" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="5.0">
+            <Button layoutX="200.0" layoutY="7.0" mnemonicParsing="false" onAction="#HistogramButton" prefHeight="26.0" prefWidth="95.0" style="-fx-background-color: FFFFFFF;" text="Histogram" AnchorPane.topAnchor="7.0" />
+            <Button layoutX="28.0" layoutY="9.0" mnemonicParsing="false" onAction="#HomeButton" prefHeight="5.0" prefWidth="14.0" style="-fx-background-color: FFFFFF;" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="5.0">
                <graphic>
                   <ImageView fitHeight="26.0" fitWidth="35.0">
                      <image>
@@ -52,11 +47,11 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button layoutX="64.0" layoutY="10.0" mnemonicParsing="false" prefHeight="5.0" prefWidth="14.0" style="-fx-background-color: FFFFFF;" AnchorPane.leftAnchor="70.0" AnchorPane.topAnchor="5.0">
+            <Button layoutX="64.0" layoutY="10.0" mnemonicParsing="false" onAction="#UserProfileButton" prefHeight="5.0" prefWidth="14.0" style="-fx-background-color: FFFFFF;" AnchorPane.leftAnchor="70.0" AnchorPane.topAnchor="5.0">
                <graphic>
                   <ImageView fitHeight="26.0" fitWidth="35.0">
                      <image>
-                        <Image url="@../../../image/user icon.png" />
+                        <Image url="@../../../image/User icon.png" />
                      </image>
                   </ImageView>
                </graphic>
@@ -84,12 +79,12 @@
                   <Image url="@../../../image/BackgroundNavigation.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="background" fitHeight="310.0" fitWidth="432.0" layoutX="445.0" opacity="0.17" pickOnBounds="true">
+            <ImageView fx:id="background2" fitHeight="310.0" fitWidth="432.0" layoutX="445.0" opacity="0.17" pickOnBounds="true">
                <image>
                   <Image url="@../../../image/background.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="background" fitHeight="310.0" fitWidth="449.0" opacity="0.17" pickOnBounds="true">
+            <ImageView fx:id="background1" fitHeight="310.0" fitWidth="449.0" opacity="0.17" pickOnBounds="true">
                <image>
                   <Image url="@../../../image/background.png" />
                </image>
@@ -105,7 +100,7 @@
                   <Font size="23.0" />
                </font>
             </Text>
-            <Button fx:id="showMap" layoutX="809.0" layoutY="9.0" mnemonicParsing="false" onAction="#Map" text="Show Map" />
+            <Button layoutX="809.0" layoutY="9.0" mnemonicParsing="false" onAction="#Map" text="Show Map" />
             <Text fx:id="information" layoutX="30.0" layoutY="236.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-blend-mode: black;" wrappingWidth="608.5367584228516">
                <font>
                   <Font size="24.0" />
@@ -124,7 +119,7 @@
             <Font name="Arial" size="16.0" />
          </font>
       </Text>
-      <Button fx:id="findpath" layoutX="639.0" layoutY="532.0" mnemonicParsing="false" onAction="#findShortestPath" prefHeight="26.0" prefWidth="150.0" text="Find Path" />
+      <Button layoutX="639.0" layoutY="532.0" mnemonicParsing="false" onAction="#findShortestPath" prefHeight="26.0" prefWidth="150.0" text="Find Path" />
       <ImageView fitHeight="80.0" fitWidth="84.0" layoutX="806.0" layoutY="499.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../image/map.png" />
